@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-31T08:28:51Z",
+  "timestamp" : "2022-08-31T16:32:49Z",
   "count_outdated" : 752,
   "uniques_outdated" : 393,
-  "count" : 778,
+  "count" : 779,
   "uniques" : 407,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
