@@ -1,3 +1,11 @@
+2022-08-31T16:32:49Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2965503447
+* notice: last 14d: unq all: 3 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 393 752 / 407 778
+* notice: next accum: outdated-unq outdated-all / unq all: 393 752 / 407 779
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-08-31]
+
 2022-08-31T08:28:51Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2962384559
 * notice: last 14d: unq all: 3 26
